--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.venv
+venv
+venv_new
+__pycache__
+
 node_modules
 dist
 dist-ssr
@@ -22,4 +27,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+.env
+backend/.env
+.env.*
+backend/.env.*
